@startuml
skinparam style strictuml
skinparam shadowing false
skinparam DefaultFontName "Helvetica"
skinparam DefaultFontSize 12

skinparam state {
    BackgroundColor #F5F7FA
    BorderColor #A0AEC0
    FontColor #2D3748
    FontSize 13
    FontStyle bold

    ArrowColor #4A5568
    ArrowThickness 1.6
    ArrowFontColor #4A5568
    ArrowFontSize 11
}

skinparam ranksep 100
skinparam nodesep 120

[*] --> DRAFT : createEvent() / force DRAFT

DRAFT --> CONFIRMED : confirmEvent() [Administrator o Organiser assegnato]
CONFIRMED --> PUBLISHED : publishEvent() [evento futuro, venue esistente, capienza > 0]\n/ setPublishedAt(now)

DRAFT -right-> CANCELLED : cancelEvent() [Administrator o Organiser assegnato]
CONFIRMED -right-> CANCELLED : cancelEvent() [Administrator o Organiser assegnato]\n/ cancelBookingsAndGuests()
PUBLISHED -right-> CANCELLED : cancelEvent() [Administrator o Organiser assegnato]\n/ cancelBookingsAndGuests()

@endum
